--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,18 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	background-color: #faefd3;
-	cursor:help;
+	cursor: url(images/beer.png), auto;
 }
 
+img {
+	width: 100%;
+}
 
 div {
 	text-align: center;
@@ -13,6 +21,68 @@ div {
 canvas {
 	width: 100%;
 	max-width: 512px;
+}
+
+h1 {
+	font-size: 32vw;
+	color: #faefd3;
+}
+
+p {
+	color: #faefd3;
+    font-size: 8vw;
+}
+
+.aufdich {
+	width: 97vw;
+	padding-bottom: 3vw;
+	background-color: #e7334c;
+}
+
+.berlin {
+    width: 97vw;
+}
+
+.berlintext {
+	width: 47vw;
+	display: inline-block;
+	background-color: #e7334c;
+	float: left;
+	margin-right: 3vw;
+	padding-bottom: 3vw;
+	padding-top: 3vw;
+}
+
+.iconliebe {
+	width: 47vw;
+	display: inline-block;
+	float: left;
+}
+
+.iconliebe div {
+	background-color: #e7334c;
+}
+
+.iconliebe div:last-child {
+	margin-top: 3vw;
+}
+
+.bottleheart {
+	margin-top: 2vw;
+	margin-bottom: 3vw;
+	max-width: 80%;
+}
+
+.game {
+	width: 47vw;
+}
+
+
+
+
+.divider {
+	width: 100%;
+	height: 3vw;
 }
 
 footer {
